--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Boldog Karácsonyt, Kicsim 🎄💗</title>
+    <title>Boldog Karácsonyt Kicsim 🎄💗</title>
     <link rel="stylesheet" href="nico.css" />
   </head>
 
@@ -18,8 +18,12 @@
 
     <main class="page">
       <header class="hero">
+        <video class="bg-video" autoplay muted loop playsinline>
+          <source src="video/Névtelen videó – A Clipchamppel készült.mp4" type="video/mp4" />
+        </video>
+
         <div class="hero-overlay">
-          <h1>Boldog Karácsonyt, Kicsim 🎄💗</h1>
+          <h1>Boldog Karácsonyt Kicsim 🎄💗</h1>
           <p class="subtitle">Egy kis meglepetés csak neked 🌷</p>
         </div>
       </header>
@@ -98,11 +102,11 @@
 
       <footer class="closing">
         <p>
-          Boldog Karácsonyt, Kicsim 🎄💗<br />
+          Boldog Karácsonyt Kicsim 🎄💗<br />
           Várlak. Gondolok rád. Ölellek 🫂🤗
         </p>
         <p class="signature">
-          Szeretlek – nagyon.<br />
+          Szeretlek  nagyon.<br />
           👾💞🫤<br />
           <strong>Nico</strong>
         </p>
