--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Boldog Karácsonyt Kicsim 🎄💗</title>
     <link rel="stylesheet" href="nico.css" />
+    <link rel="shortcut icon" href="video/favicon.ico" type="image/x-icon" />
   </head>
 
   <body>
@@ -19,7 +20,10 @@
     <main class="page">
       <header class="hero">
         <video class="bg-video" autoplay muted loop playsinline>
-          <source src="video/Névtelen videó – A Clipchamppel készült.mp4" type="video/mp4" />
+          <source
+            src="video/Névtelen videó – A Clipchamppel készült.mp4"
+            type="video/mp4"
+          />
         </video>
 
         <div class="hero-overlay">
@@ -54,7 +58,7 @@
           <p>
             Hiányzol, Kicsim. Hiányzol a gondolataimban, a napjaimban, az
             estéimben. Hiányzik a hangod, a mosolyod 🥰, és az az érzés, amikor
-            tudom, hogy te ott vagy nekem. Mégis, ez a hiány csak még jobban
+            tudom, hogy te ott vagy mellettem. Mégis, ez a hiány csak még jobban
             megmutatja, mennyire fontos vagy nekem 🌷
           </p>
 
@@ -66,10 +70,11 @@
           </p>
 
           <p>
-            Amikor ezt olvasod, képzeld el, hogy ott állok melletted 👾, kicsit
-            zavartan mosolyogva 🤭, és csak nézlek, ahogy te szoktál 🫤. Aztán
-            közelebb lépek, átölellek 🤗🫂, és halkan azt mondom: itt vagyok.
-            Mindig itt leszek neked.
+            Ez a karácsony most más. Bár nem lehetünk egymás mellett, a szívünk
+            mégis együtt dobban👾💗🫤. A szeretetem irántad ugyanolyan meleg és
+            őszinte, mint a karácsonyi fények ragyogása. Remélem, amikor ezt
+            olvasod, érzed benne mindazt, amit én érzek: hogy mennyire
+            szeretlek, és mennyire fontos vagy nekem 🥰💘🌷
           </p>
 
           <p>
@@ -94,9 +99,6 @@
       <section class="video-section">
         <h2>Egy kis üzenet neked 🎥💗</h2>
         <div class="video-wrapper">
-          <video controls>
-            <source src="video/ajandek.mp4" type="video/mp4" />
-          </video>
         </div>
       </section>
 
@@ -106,7 +108,7 @@
           Várlak. Gondolok rád. Ölellek 🫂🤗
         </p>
         <p class="signature">
-          Szeretlek  nagyon.<br />
+          Szeretlek nagyon.<br />
           👾💞🫤<br />
           <strong>Nico</strong>
         </p>
