mar csak a link kell a videóról

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 
       <section class="video-section">
         <h2>Egy kis üzenet neked 🎥💗</h2>
+        <p>linkhmtmkfkjdfsadh jsajdnsajndjksandjkn dnjsan</p>
         <div class="video-wrapper">
         </div>
       </section>
@@ -105,7 +106,7 @@
       <footer class="closing">
         <p>
           Boldog Karácsonyt Kicsim 🎄💗<br />
-          Várlak. Gondolok rád. Ölellek 🫂🤗
+          Várlak. Gondolok rád. Ölellek 🫂🤗 és csókollak😘
         </p>
         <p class="signature">
           Szeretlek nagyon.<br />
