--- a/index.html
+++ b/index.html
@@ -97,9 +97,15 @@
 
       <section class="video-section">
         <h2>Egy kis üzenet neked 🎥💗</h2>
-        <p>https://drive.google.com/file/d/1BNVoXYVr9SZCZwRofH5VDGMtwGX_A7BW/view?usp=sharing</p>
-        <div class="video-wrapper">
-        </div>
+        <iframe
+          src="https://drive.google.com/file/d/1BNVoXYVr9SZCZwRofH5VDGMtwGX_A7BW/preview"
+          width="800"
+          height="600"
+          frameborder="0"
+          allow="autoplay"
+        >
+        </iframe>
+        <div class="video-wrapper"></div>
       </section>
 
       <footer class="closing">
