--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <p class="subtitle">Egy kis meglepetés csak neked 🌷</p>
         </div>
       </header>
+
       <section class="fireplace-section">
         <div class="fireplace-text">
           <h2>Meleg, mint az érzéseim 🔥</h2>
@@ -97,15 +98,15 @@
 
       <section class="video-section">
         <h2>Egy kis üzenet neked 🎥💗</h2>
-        <iframe
-          src="https://drive.google.com/file/d/1BNVoXYVr9SZCZwRofH5VDGMtwGX_A7BW/preview"
-          width="800"
-          height="600"
-          frameborder="0"
-          allow="autoplay"
-        >
-        </iframe>
-        <div class="video-wrapper"></div>
+
+        <!-- CSAK EZ VÁLTOZOTT -->
+        <div class="video-wrapper">
+          <iframe
+            src="https://drive.google.com/file/d/1BNVoXYVr9SZCZwRofH5VDGMtwGX_A7BW/preview"
+            allow="autoplay"
+            allowfullscreen>
+          </iframe>
+        </div>
       </section>
 
       <footer class="closing">
